# Divvy

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
buckets/: schd_dgro_vym_sdy_abbv.yaml  schd_dgro_vym_sdy_o.yaml
docs/: LAUNCH.md  index.html
examples/: contributions.csv
examples/buckets/: dividend_etf_core.yaml  equal_weight.yaml  high_yield_tilt.yaml
src/divvy/: __init__.py  cli.py  contributions.py  engine.py  ledger.py  market_data.py  project.py  report.py  synthetic.py  ui.py
src/divvy/importers/: __init__.py  broker_template.py  fidelity_1099.py
tests/: test_analytics.py  test_cli_holdings.py  test_contributions.py  test_engine.py  test_engine_options.py  test_fidelity_1099.py  test_ledger.py  test_project.py  test_report_series.py
tests/fixtures/: sample_ledger.csv
